# xi-editor

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD.gn  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EditViewController.swift  ISSUE_TEMPLATE.md  README.md  build-rust-xcode.sh  ci.local  rustfmt.toml  setup.py  xi-core.sh  xicore.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Dimer/: AppDelegate.swift  AppWindowController.swift  AppWindowController.xib  CoreConnection.swift  EditView.swift  Info.plist  ShadowView.swift
Dimer.xcodeproj/: project.pbxproj
DimerTests/: DimerTests.swift
DimerUITests/: DimerUITests.swift
XiEditor/: AppDelegate.swift  AppWindowController.swift  AppWindowController.xib  CoreConnection.swift  Dispatcher.swift  Document.swift  EditView.swift  EditViewController.swift  Info.plist  LineCache.swift  Main.storyboard  SearchController.swift  SearchController.xib  ShadowView.swift  StyleMap.swift
XiEditor.xcodeproj/: project.pbxproj
XiEditorTests/: XiEditorTests.swift
XiEditorUITests/: XiEditorUITests.swift
dart/: .analysis_options  .gitignore  BUILD.gn  README.md
dart/modules/xi_app/: BUILD.gn
dart/modules/xi_app/lib/: main.dart
dart/modules/xi_app/lib/src/: peer.dart
dart/xi_flutter/: BUILD.gn  README.md  flutter.yaml  pubspec.yaml
dart/xi_flutter/android/: AndroidManifest.xml
dart/xi_flutter/ios/Runner/: Info.plist
dart/xi_flutter/ios/Runner.xcodeproj/: project.pbxproj
dart/xi_flutter/lib/: main.dart
doc/: cache-sim.html  config.md  crdt-details.md  crdt.md  frontend.md  fuchsia-ledger-crdts.md  plugin.md  plugin_commands.md  plugins2.md  roadmap.md  update.md
docs/: .gitignore  Gemfile  _config.yml  (+7 more)
rust/: .gitignore  BUILD.gn  Cargo.toml  check_formatting.sh  compile_size_compare.py  run_all_checks  run_ci  rustfmt.toml  test.sh  travis_after_succes  xi.fidl
rust/core-lib/: BUILD.gn  Cargo.toml
rust/core-lib/assets/: client_example.toml  defaults.toml  makefile.toml  windows.toml  yaml.toml
rust/core-lib/benches/: wrap.rs
rust/core-lib/src/: TEST  annotations.rs  backspace.rs  client.rs  completions.rs  config.rs  core.rs  edit_ops.rs  edit_types.rs  editing.rs  editor.rs  event_context.rs  file.rs  find.rs  index_set.rs  layers.rs  lib.rs  line_cache_shadow.rs  line_ending.rs  line_offset.rs  linewrap.rs  movement.rs  plugins.rs  prefs.rs  recorder.rs  rpc.rs  run_plugin.rs  selection.rs  session.rs  styles.rs  syntax.rs  tabs.rs  undo.rs  view.rs  watcher.rs  whitespace.rs  width_cache.rs  word_boundaries.rs  writer.rs
rust/core-lib/src/fuchsia/: ledger.rs  mod.rs  sync.rs
rust/core-lib/src/plugins/: catalog.rs  manager.rs  manifest.rs  mod.rs  rpc.rs  rpc_types.rs
rust/core-lib/tests/: rpc.rs
rust/experimental/lang/: Cargo.toml  Makefile  manifest.toml
rust/experimental/lang/benches/: peg_tests.rs
rust/experimental/lang/src/: colorize.rs  lib.rs  main.rs  parser.rs  peg.rs  rust.rs  statestack.rs  tracker.rs
rust/experimental/lang/src/language/: mod.rs  plaintext.rs  rust.rs
rust/json-lsp-plugin/: Cargo.toml  Makefile  manifest.toml
rust/json-lsp-plugin/src/: main.rs
rust/lang/: Cargo.toml
rust/lang/benches/: peg_tests.rs
rust/lang/src/: colorize.rs  main.rs  peg.rs  rust.rs
rust/lsp-lib/: Cargo.toml  Makefile  manifest.toml
rust/lsp-lib/examples/json-lsp-plugin/: Cargo.toml  Makefile  manifest.toml
rust/lsp-lib/examples/json-lsp-plugin/src/: main.rs
rust/lsp-lib/examples/rust-lsp-plugin/: Cargo.toml  Makefile  manifest.toml
rust/lsp-lib/examples/rust-lsp-plugin/src/: main.rs
rust/lsp-lib/src/: conversion_utils.rs  language_server.rs  language_server_client.rs  lib.rs  lsp_plugin.rs  parse_helper.rs  result_queue.rs  types.rs  utils.rs
rust/plugin-lib/: Cargo.toml
rust/plugin-lib/src/: base_cache.rs  caching_plugin.rs  core_proxy.rs  dispatch.rs  lib.rs  macros.rs  plugin_base.rs  state_cache.rs  stateful_plugin.rs  view.rs
rust/plugin-lib/src/global/: dispatch.rs  mod.rs  view.rs
rust/rope/: BUILD.gn  Cargo.toml
rust/rope/benches/: cursors.rs  diff.rs  edit.rs  rope.rs  spans.rs
rust/rope/docs/: MetricsAndBoundaries.md
rust/rope/examples/: ropetoy.rs
rust/rope/fuzz/: Cargo.toml
rust/rope/fuzz/fuzz_targets/: op_seq.rs  single_edits.rs
rust/rope/fuzz/fuzzers/: fuzzer_script_1.rs  op_seq.rs
rust/rope/fuzz/src/: lib.rs  trophies.rs
rust/rope/src/: breaks.rs  compare.rs  delta.rs  diff.rs  engine.rs  find.rs  interval.rs  lib.rs  linewrap.rs  multiset.rs  rope.rs  rope_delta_helpers.rs  serde_impls.rs  spans.rs  subset.rs  test_helpers.rs  tree.rs
rust/rpc/: BUILD.gn  Cargo.toml
rust/rpc/examples/: try_chan.rs
rust/rpc/src/: error.rs  lib.rs  macros.rs  parse.rs  test_utils.rs
rust/rpc/tests/: integration.rs
rust/sample-plugin/: Cargo.toml  Makefile  README.md  manifest.toml
rust/sample-plugin/src/: main.rs
rust/src/: edit_command.rs  editor.rs  fidl_main.rs  linewrap.rs  macros.rs  main.rs  rpc.rs  rpc_peer.rs  run_plugin.rs  tabs.rs  view.rs
rust/syntect-plugin/: Cargo.toml  Makefile  makefile  manifest.toml  original_manifest.toml  syntaxes.packfile
rust/syntect-plugin/assets/: default.packdump  default_meta.packdump
rust/syntect-plugin/examples/: make_manifest.rs
rust/syntect-plugin/src/: caching_plugin.rs  global.rs  local.rs  main.rs  plugin_base.rs  stackmap.rs
rust/trace/: Cargo.toml
rust/trace-dump/: Cargo.toml
rust/trace-dump/src/: chrome_trace.rs  ipc.rs  lib.rs
rust/trace-ffi/: Cargo.toml
rust/trace-ffi-examples/: Cargo.toml  build.rs
rust/trace-ffi-examples/benches/: bench_ffi.c  c_bench_ffi.rs
rust/trace-ffi-examples/src/: api.h  example.c  xi_trace_ffi.h
rust/trace-ffi/src/: lib.rs
rust/trace/src/: chrome_trace_dump.rs  fixed_lifo_deque.rs  lib.rs  sys_pid.rs  sys_tid.rs
rust/unicode/: BUILD.gn  Cargo.toml  README.md
rust/unicode/benches/: bench.rs
rust/unicode/examples/: runtestdata.rs
rust/unicode/src/: emoji.rs  lib.rs  tables.rs
rust/unicode/tests/: LineBreakTest.txt  linebreaktest.rs
rust/unicode/tools/: Makefile  gen_rand_icu.cc  mk_tables.py
(+82 files in other folders)
