[package]
name = "xi-core"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/google/xi-editor"

[dependencies]
serde = "1.0"
serde_json = "1.0"

[dependencies.xi-core-lib]
path = "core-lib"

[dependencies.xi-rpc]
path = "rpc"
