[package]
name = "xi-core"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/google/xi-editor"
edition = '2018'

[dependencies]
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.5"
fern = "0.5.6"
log = "0.4.3"
dirs = "1.0.4"

[dependencies.xi-core-lib]
path = "core-lib"

[dependencies.xi-rpc]
path = "rpc"

[workspace]
members = [
  "core-lib",
  "experimental/lang",
  "lsp-lib",
  "plugin-lib",
  "rope",
  "rpc",
  "sample-plugin",
  "syntect-plugin",
  "trace",
  "unicode",
]

[profile.bench]
lto = true
