[package]
name = "xi-core"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/xi-editor/xi-editor"
edition = '2018'
rust = "1.40"

[dependencies]
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.5"
fern = "0.6"
log = "0.4.3"
dirs = "2.0"

[dependencies.xi-core-lib]
path = "core-lib"

[dependencies.xi-rpc]
path = "rpc"

[workspace]
members = [
  "core-lib",
  "experimental/lang",
  "lsp-lib",
  "plugin-lib",
  "rope",
  "rpc",
  "sample-plugin",
  "syntect-plugin",
  "trace",
  "unicode",
]

# Avoid libllvm/libclang dep. See https://github.com/rust-onig/rust-onig/pull/108
[patch.crates-io]
onig = { git="https://github.com/kornelski/rust-onig", branch="bindgen" }
onig_sys = { git="https://github.com/kornelski/rust-onig", branch="bindgen" }
