[package]
name = "xi-core-lib"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Library module for xi-core"
repository = "https://github.com/google/xi-editor"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"

xi-rope = { path = "../rope", version = "0.2" }
xi-unicode = { path = "../unicode", version = "0.1.0" }
xi-rpc = { path = "../rpc", version = "0.2.0" }

[dependencies.config]
version = "0.7"
default-features = false
features = ["toml"]

[dependencies.syntect]
version = "1.7"
default-features = false
features = ["assets","dump-load-rs"]

[target."cfg(target_os = \"fuchsia\")".dependencies]
sha2 = "0.5"

[features]
avx-accel = ["xi-rope/avx-accel"]
simd-accel = ["xi-rope/simd-accel"]
