[package]
name = "xi-lsp-lib"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/google/xi-editor"
description = "The base library for implementing LSP Plugins for Xi"
authors = ["betterclever <paliwal.pranjal83@gmail.com>"]

[dependencies]
languageserver-types = "0.41.0"
serde = "1.0.66"
serde_json = "1.0.20"
serde_derive = "1.0.66"
jsonrpc-lite = "0.5.0"
url = "1.7.0"
fern = "0.5.6"
log = "0.4.3"
chrono = "0.4.4"

[dependencies.xi-plugin-lib]
path = "../plugin-lib"

[dependencies.xi-core-lib]
path = "../core-lib"

[dependencies.xi-rope]
path = "../rope"

[dependencies.xi-rpc]
path = "../rpc"

[dependencies.xi-trace]
path = "../trace"
