[package]
name = "xi-plugin-lib"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "The library base for implementing xi-editor plugins."

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytecount = "0.1.2"

[dependencies.xi-rpc]
path = "../rpc"
