[package]
name = "xi-rpc"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "Utilities for building peers (both client and server side) for xi's JSON RPC variant."
edition = '2018'

[dependencies]
log = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
crossbeam-utils = "0.7"

xi-trace = { path = "../trace", version = "0.2.0" }
