[package]
name = "xi-syntect-plugin"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "A syntax highlighting plugin based on syntect."

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
toml = "0.4"

[dependencies.syntect]
version = "2.0"
default-features = false
features = ["parsing", "assets","dump-load-rs"]

[dependencies.xi-plugin-lib]
path = "../plugin-lib"

[dependencies.xi-core-lib]
path = "../core-lib"

[dependencies.xi-rope]
path = "../rope"

[dependencies.xi-trace]
path = "../trace"
