[package]
name = "xi-lang"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "A language syntax coloring and indentation plugin for xi-editor."

[dependencies]
pom = { version = "0.8", optional = true }
regex = { version = "0.2", optional = true }
nom = { version = "2.1", optional = true }
combine = { version = "2.2.2", optional = true }

[dependencies.xi-plugin-lib]
path = "../plugin-lib"
