[package]
name = "xi-lang"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "A language syntax coloring and indentation plugin for xi-editor."
edition = '2018'

[dependencies]
pom = { version = "3.0", optional = true }
regex = { version = "1.0", optional = true }
nom = { version = "4.2", optional = true }
combine = { version = "3.8", optional = true }

[dependencies.xi-plugin-lib]
path = "../../plugin-lib"

[dependencies.xi-core-lib]
path = "../../core-lib"

[dependencies.xi-rope]
path = "../../rope"

[dependencies.xi-trace]
path = "../../trace"
